--- a/templates/customer/eng.html
+++ b/templates/customer/eng.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
   <style type="text/css">
+    body{
+      overflow: hidden;
+    }
     a:link {
       text-decoration: none;
     }
@@ -64,6 +67,9 @@
     header {
     left: 0px;
     right: 0px;
+  }
+  .row{
+    padding-bottom: 0px;
   }
   </style>
 </head>
