--- a/templates/customer/customersignup.html
+++ b/templates/customer/customersignup.html
@@ -1,73 +1,270 @@
 <!DOCTYPE html>
 {% load widget_tweaks %}
-<html lang="en" dir="ltr">
+<html>
   <head>
     <meta charset="utf-8">
+    <title>HTML CSS Register Form</title>
     <style>
+        
+/*---------------------------------------*/
+/* Font */
+/*---------------------------------------*/
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
-        form{
-           margin: 50px; 
-          
-        }
+
+/*---------------------------------------*/
+/* Register Form */
+/*---------------------------------------*/
+body {
+  background:linear-gradient(to right, #78a7ba 0%, #385D6C 50%, #78a7ba 99%);
+}
+
+.signup-form {
+  font-family: "Roboto", sans-serif;
+  width:650px;
+  margin:30px auto;
+  background:linear-gradient(to right, #ffffff 0%, #fafafa 50%, #ffffff 99%);
+  border-radius: 10px;
+}
+
+/*---------------------------------------*/
+/* Form Header */
+/*---------------------------------------*/
+.form-header  {
+  background-color: #EFF0F1;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.form-header h1 {
+  font-size: 30px;
+  text-align:center;
+  color:#666;
+  padding:20px 0;
+  border-bottom:1px solid #cccccc;
+}
+
+/*---------------------------------------*/
+/* Form Body */
+/*---------------------------------------*/
+.form-body {
+  padding:10px 40px;
+  color:#666;
+}
+
+.form-group{
+  margin-bottom:20px;
+}
+
+.form-body .label-title {
+  color:#1BBA93;
+  font-size: 17px;
+  font-weight: bold;
+}
+
+.form-body .form-input {
+    font-size: 17px;
+    box-sizing: border-box;
+    width: 100%;
+    height: 34px;
+    padding-left: 10px;
+    padding-right: 10px;
+    color: #333333;
+    text-align: left;
+    border: 1px solid #d6d6d6;
+    border-radius: 4px;
+    background: white;
+    outline: none;
+}
+
+
+
+.horizontal-group .left{
+  float:left;
+  width:49%;
+}
+
+.horizontal-group .right{
+  float:right;
+  width:49%;
+}
+
+input[type="file"] {
+  outline: none;
+  cursor:pointer;
+  font-size: 17px;
+}
+
+#range-label {
+  width:15%;
+  padding:5px;
+  background-color: #1BBA93;
+  color:white;
+  border-radius: 5px;
+  font-size: 17px;
+  position: relative;
+  top:-8px;
+}
+
+
+::-webkit-input-placeholder  {
+  color:#d9d9d9;
+}
+
+/*---------------------------------------*/
+/* Form Footer */
+/*---------------------------------------*/
+
+
+
+.btn {
+   display:inline-block;
+   padding:10px 20px;
+   background-color: #1BBA93;
+   font-size:17px;
+   border:none;
+   border-radius:5px;
+   color:#bcf5e7;
+   cursor:pointer;
+   
+}
+
+.btn:hover {
+  background-color: #169c7b;
+  color:white;
+}
+nav{
+  position: fixed;
+  background: #1b1b1b;
+  width: 100%;
+  padding: 10px 0;
+  z-index: 12;
+  top:0;
+  left:0;
+}
+nav .menu{
+  max-width: 1250px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px;
+}
+.menu .logo a{
+  text-decoration: none;
+  color: #fff;
+  font-size: 35px;
+  font-weight: 600;
+}
+.menu ul{
+  display: inline-flex;
+}
+.menu ul li{
+  list-style: none;
+  margin-left: 7px;
+}
+.menu ul li:first-child{
+  margin-left: 0px;
+}
+.menu ul li a{
+  text-decoration: none;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 8px 15px;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+.menu ul li a:hover{
+  background: #fff;
+  color: black;
+}
+
 
     </style>
   </head>
   <body>
-    {% include "medical/navbar.html" %}
- 
-
-
-<br><br><br>
-<h3 style="text-align: center;color: red;">USER SIGNUP</h3>
-<form method="POST" autocomplete="off" enctype="multipart/form-data">
-    {% csrf_token %}
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="username">Username</label>
-        {% render_field userForm.username|attr:'required:true'  class="form-control" placeholder="Username" %}
-      </div>
-      <div class="form-group col-md-6">
-        <label for="inputPassword4">Password</label>
-        {% render_field userForm.password|attr:'required:true'  class="form-control" placeholder="Password" %}
-      </div>
-    </div>
-
-    <div class="form-row">
-        <div class="form-group col-md-6">
-          <label for="first_name">First Name</label>
-          {% render_field userForm.first_name|attr:'required:true'  class="form-control" placeholder="First Name" autocomplete="off" %}
+    <nav>
+        <div class="menu">
+          <div class="logo">
+            <a href="./home">Medical Chatbot</a>
+          </div>
+          <ul>
+            <li><a href="./customerlogin">Login</a></li>
+            <li><a href="aboutus">About</a></li>
+          </ul>
         </div>
-        <div class="form-group col-md-6">
-          <label for="last_name">Last Name</label>
-          {% render_field userForm.last_name|attr:'required:true'  class="form-control" placeholder="Last Name" autocomplete="off" %}
-        </div>
+      </nav>
+      <br><br>
+      <br><br>
+      <br><br>
+      
+    <form class="signup-form" method="POST" autocomplete="off" enctype="multipart/form-data">
+        {% csrf_token %}
+
+      <!-- form header -->
+      <div class="form-header">
+        <h1>Create Account</h1>
       </div>
 
-      <div class="form-row">
-        <div class="form-group col-md-6">
-          <label for="mobile">Contact</label>
-          {% render_field customerForm.mobile|attr:'required:true'  class="form-control" placeholder="Contact" autocomplete="off" %}
-        </div>
-        <div class="form-group col-md-6">
-          <label for="address">Address</label>
-          {% render_field customerForm.address|attr:'required:true'  class="form-control" placeholder="Address" autocomplete="off" %}
-        </div>
-      </div>
+      <!-- form body -->
+      <div class="form-body">
 
-      <div class="form-row">
-        <div class="form-group col-md-12">
-          <label for="profile_pic">Profile Picture</label>
-          {% render_field customerForm.profile_pic|attr:'required:true' class="form-control" placeholder="" %}
+        <!-- Firstname and Lastname -->
+        <div class="horizontal-group">
+            <div class="form-group center">
+                <label for="username" class="label-title">Username *</label>
+                {% render_field userForm.username|attr:'required:true'  class="form-input" placeholder="Username" %}
+              </div>
+
+          <div class="form-group left">
+            <label for="first_name" class="label-title">First name </label>
+            {% render_field userForm.first_name|attr:'required:true'  class="form-input" placeholder="First Name" autocomplete="off" %}
         </div>
+
+          <div class="form-group right">
+            <label for="last_name" class="label-title">Last name</label>
+            {% render_field userForm.last_name|attr:'required:true'  class="form-input" placeholder="Last Name" autocomplete="off" %}
+
+          </div>
+          <div class="form-group left">
+            <label for="mobile" class="label-title">Contact</label>
+            {% render_field customerForm.mobile|attr:'required:true'  class="form-input" placeholder="Contact" autocomplete="off" type="number" %}
+          </div>
+
+          <div class="form-group right">
+            <label for="address" class="label-title">Address</label>
+            {% render_field customerForm.address|attr:'required:true'  class="form-input" placeholder="Address" autocomplete="off" %}
+            </div>
+        </div>
+
+        
+        <!-- Passwrod and confirm password -->
+        <div class="horizontal-group">
+          <div class="form-group left">
+            <label for="password" class="label-title">Password *</label>
+            {% render_field userForm.password|attr:'required:true'  class="form-input" placeholder="Password"%}
+          </div>
+        </div>
+
+
+        <!-- Profile picture and Age -->
+        <div class="horizontal-group">
+          <div class="form-group left" >
+            <label for="profile_pic" class="label-title">Upload Profile Picture</label>
+            {% render_field customerForm.profile_pic|attr:'required:true' class="form-input" placeholder="" %}
+        </div>
+
+
+      <!-- form-footer -->
+      <div class="form-footer">
+        <button type="reset" class="btn">Reset</button>
+        <button type="submit" class="btn">Register</button>
         
       </div>
+     
 
+    </form>
 
-    <button type="submit" class="btn btn-primary">Sign Up</button>
-  </form>
-
-
-<br><br>
-{% include "medical/footer.html" %}
   </body>
 </html>
