--- a/templates/medical/index.html
+++ b/templates/medical/index.html
@@ -1,47 +1,173 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!------<title> Website Layout | CodingLab</title>------>
+    <!--<link rel="stylesheet" href="style.css">-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
+   
+  </head>
 
 <style>
-        .xyz{
-          margin-bottom: 0px;
-          background-image: url('{% static "image/homepage.jpg" %}');
-          background-size: cover;
-          background-repeat: no-repeat;
-        }
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins',sans-serif;
+}
+::selection{
+  color: #000;
+  background: #fff;
+}
+nav{
+  position: fixed;
+  background: #1b1b1b;
+  width: 100%;
+  padding: 10px 0;
+  z-index: 12;
+  left:0;
+  top:0;
+}
+nav .menu{
+  max-width: 1250px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+}
+.menu .logo a{
+  text-decoration: none;
+  color: #fff;
+  font-size: 35px;
+  font-weight: 600;
+}
+a{
+  text-decoration: none;
+}
+.menu ul{
+  display: inline-flex;
+}
+.menu ul li{
+  list-style: none;
+  margin-left: 7px;
+}
+.menu ul li:first-child{
+  margin-left: 0px;
+}
+.menu ul li a{
+  text-decoration: none;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 8px 15px;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+.menu ul li a:hover{
+  background: #fff;
+  color: black;
+}
+.img1{
+  position: right top;
+}
+.img{
+  
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+.img::before{
+  content: '';
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.4);
+}
+.center{
+  position: absolute;
+  top: 52%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  padding: 0 20px;
+  text-align: center;
+}
+.center .title{
+  color: #fff;
+  font-size: 55px;
+  font-weight: 600;
+}
+.center .sub_title{
+  color: #fff;
+  font-size: 52px;
+  font-weight: 600;
+}
+.center .btns{
+  margin-top: 20px;
+}
+.center .btns button{
+  height: 55px;
+  width: 170px;
+  border-radius: 5px;
+  border: none;
+  margin: 0 10px;
+  border: 0px solid red;
+  font-size: 20px;
+  font-weight: 500;
+  padding: 0px;
+  cursor: pointer;
+  outline: none;
+  transition: all 0.3s ease;
+}
+.center .btns button:first-child{
+  color: red;
+  background: none;
+}
+.btns button:first-child:hover{
+  background: red;
+  color: black;
+}
+.center .btns button:last-child{
+  background: white;
+  color: black;
+}
+
+       
 </style>
 <body>
-  {% include "medical/navbar.html" %}
-<br>
+  <nav>
+    <div class="menu">
+      <div class="logo">
+        <a href="#">Medical Chatbot</a>
+      </div>
+      <ul>
+        <li><a href="/customer/customerlogin">Login</a></li>
+        <li><a href="aboutus">About</a></li>
+        
+      </ul>
+    </div>
+  </nav>
 
-<section id="section-jumbotron" class="jumbotron jumbotron-fluid d-flex justify-content-center align-items-center ">
-  <div class="container text-center">
-    <h2 class="display-3 text-danger">Medical Chatbot System</h2>
+  <div class="img">
+    {% load static %}
+    <img src="{% static 'image/bg.png'%}" style="float:right;height:700px;">
+  </div>
+  <div class="center">
+    <div class="title">Welcome to Medical Chatbot System</div>
+    <div class="sub_title">Sign Up now to start talking to your CHATBOT</div>
+    <div class="btns">
+      <button><a href="/customer/customersignup" ><i class="fa fa-user" aria-hidden="true"></i> Sign Up</a>
+      </button>
+      
+    </div>
+  </div>
 
-    <p class="display-4 d-none d-sm-block">Using Python Django</p>
-    
-    <p class="lead">Sign Up now to start talking to your CHATBOT</p>
-
-  
-    
-    <a href="/customer/customersignup" class="btn btn-lg btn-danger" style="border-radius: 0%;"><i class="fa fa-user" aria-hidden="true"></i> Sign Up</a>
-    
-    <br>
-    
-    <br><br>
-
-   
-  
-  
-  </div>  
-</section>
-
-<!-- 
-<div class="jumbotron" style="margin-top: 0px;margin-bottom: 0px;">
-
- 
-  
-</div> -->
   {% include "medical/footer.html" %}
 
 
