--- a/templates/medical/navbar.html
+++ b/templates/medical/navbar.html
@@ -23,6 +23,52 @@
       font-family: monospace;
       
     }
+    nav{
+  position: fixed;
+  background: #1b1b1b;
+  width: 100%;
+  padding: 10px 0;
+  z-index: 12;
+  left:0;
+  top:0;
+}
+nav .menu{
+  max-width: 1250px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+}
+.menu .logo a{
+  text-decoration: none;
+  color: #fff;
+  font-size: 35px;
+  font-weight: 600;
+}
+.menu ul{
+  display: inline-flex;
+}
+.menu ul li{
+  list-style: none;
+  margin-left: 7px;
+}
+.menu ul li:first-child{
+  margin-left: 0px;
+}
+.menu ul li a{
+  text-decoration: none;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 8px 15px;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+.menu ul li a:hover{
+  background: #fff;
+  color: black;
+}
   </style>
 </head>
 
@@ -31,36 +77,19 @@
 
 
   <div class="bs-example">
-    <nav class="navbar navbar-expand-md  navbar-dark fixed-top" style="background-color: #000000;">
-    <a style="color: #ffffff;text-decoration: none; " href="/"><font size =" 4">Medical Chatbot System</font><br /></a>  
-      <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-        <div class="navbar-nav">
-          <p style="
-          padding-left: 15px;
-      "  class="nav-item nav-link active"></p>
-
-          
-
-
-        </div>
-
-        <div class="navbar-nav">
-          <a href="/customer/customersignup" class="nav-item nav-link">Register</a>
-          <a href="/adminlogin" class="nav-item nav-link">Login</a>
-          <a href="{% url 'doctor_signup' %}" class="nav-item nav-link">Doctor Register</a>
-          <a href="/aboutus" class="nav-item nav-link">About Us</a>
-          
-        </div>
-
-
-
-
+    
+  <nav>
+    <div class="menu">
+      <div class="logo">
+        <a href="/index">Medical Chatbot</a>
       </div>
-    </nav>
+      <ul>
+        <li><a href="/customer/customerlogin">Login</a></li>
+        <li><a href="aboutus">About</a></li>
+        
+      </ul>
+    </div>
+  </nav>
   </div>
 
 
